--- a/asset/common.css
+++ b/asset/common.css
@@ -118,7 +118,8 @@ blockquote{
 	font-family: var(--context-font);
 	line-height: 150%;
 	padding: var(--spacing-2) var(--spacing-1);
-	margin-bottom: var(--spacing-2);
+	margin-bottom: var(--spacing-3);
+	margin-top: var(--spacing-3);
 }
 
 blockquote em{
@@ -387,7 +388,7 @@ header{
 
 blockquote{
 	font-size: var(--superbig-size);
-	margin: var(--spacing-0) 0px;
+	margin: var(--spacing-6) 0px;
 	padding: var(--spacing-4);
 	width: 100%;
 }
